# voiceserver

./: CMakeLists.txt  README.md  build.sh  日记.md
include/: Acceptor.h  Address.h  Logger.h  MultiServer.h  Room.h  RoomManager.h  Socket.h  User.h  noncopyable.h  universal.h
src/: Acceptor.cpp  Logger.cpp  Socket.cpp  kcp.c
test/: CMakeCache.txt  CMakeLists.txt  Makefile  UdpSocketTest.cpp  clear.sh  cmake_install.cmake  echoClient.cpp  echoServer.cpp
